--- a/src/App.css
+++ b/src/App.css
@@ -255,12 +255,9 @@
 
 .home-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 20px;
-  width: 100% !important;
-  max-width: 1000px !important;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
 }
 
 .card-container > div {
@@ -339,6 +336,14 @@
   padding: 6px 14px;
   border-radius: 8px;
   margin-left: 5px;
+}
+
+.cart-container {
+  max-height: calc(100vh - 150px);
+  overflow-y: auto;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 8px;
 }
 
 @media (max-width: 768px) {
